# gchallenge

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: csv_service.py  database.py  main.py  schemas.py
data/: departments.csv  employees.csv  jobs.csv
docs/: cicd.md  iac.examples.md  security-considerations.md
sql/: departments_above_average.sql  hired_by_quarter.sql
tests/: conftest.py  test_csv_service.py  test_main.py  test_metrics.py
